[package]
name = "wb-command-tests"
version = "0.1.0"
authors = ["Akira Hayakawa <ruby.wktk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cmd_lib = { workspace = true }

device-mapper-tests = { path = "../device-mapper-tests" }